# simpleLogger

./: .gitignore  CMakeLists.txt  README.md
include/: colorCodes.hpp  logger.hpp
src/: logger.cpp
